REGRESSION(r270425) [GTK] wheel scrolling stopped working https://bugs.webkit.org/show_bug.cgi?id=219547

Reviewed by Carlos Garcia Campos.

Source/WebCore:

Return early if the frame was already deleted.

Needed for fast/events/wheel-event-destroys-frame.html

* page/EventHandler.cpp:
(WebCore::EventHandler::wheelEventWasProcessedByMainThread):

Source/WebKit:

In GTK we may have the case where the async scrolling is disabled at
runtime despite being compiled with ASYNC_SCROLLING/SCROLLING_THREAD.
In these cases, the wheel events still need to be dispatched through
the main thread.

* WebProcess/WebPage/EventDispatcher.cpp:
(WebKit::EventDispatcher::wheelEvent):

LayoutTests:

* platform/gtk/fast/scrolling/overflow-scrollable-after-back-expected.txt:
Rebaseline with the extra scroll events arriving


Canonical link: https://commits.webkit.org/232831@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271235 268f45cc-cd09-0410-ab3c-d52691b4dbfc